--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/auth-ru.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/auth-ru.json
@@ -8,9 +8,12 @@
   "common": {
     "alreadyRegistered": "Уже зарегистрированы? Войти здесь",
     "confirmNewPassword": {
+      "error": "ru_Password confirmation doesn't match Password",
       "label": "Подтвердить новый пароль"
     },
     "email": {
+      "error": "ru_Email cannot be empty",
+      "label": "Адрес электронной почты",
       "whoseEmail": "Чей адрес электронной почты мне нужно ввести?",
       "whoseEmailTooltip": "Если вы являетесь родителем/законным опекуном ребенка (детей) с A-T, используйте свой адрес электронной почты.  Мы будем использовать этот адрес для связи с вами по поводу лиц, которых вы зарегистрируете в Глобальной платформе данных о семьях с A-T."
     },
@@ -18,13 +21,16 @@
     "joinUs": "Присоединиться",
     "or": "или",
     "password": {
+      "error": "ru_at least 8 characters including: a lower-case letter, an upper-case letter, a number, a special character (such as !@#$%^&*).",
       "label": "Пароль"
     },
     "reenter": {
+      "error": "ru_Password confirmation doesn't match Password",
       "label": "Введите пароль еще раз"
     },
     "resendInstructions": "Отправить инструкции еще раз",
     "resetPassword": {
+      "error": "ru_at least 8 characters including: a lower-case letter, an upper-case letter, a number, a special character (such as !@#$%^&*).",
       "label": "Новый пароль"
     },
     "signin": "Войти",
@@ -38,9 +44,11 @@
   "header": {
     "aboutThisInitiative": "О нашей программе",
     "aboutUs": "О нас",
+    "dataAccessRequest": "Запрос на доступ к данным",
     "joinUs": "Присоединиться",
     "language": "Язык",
     "learnMore": "Узнать больше",
+    "researchers": "Исследователям",
     "signIn": "Войти"
   },
   "login": {
@@ -48,12 +56,14 @@
     "useEmail": "Использовать адрес электронной почты:"
   },
   "modal": {
+    "InvalidLogin": "ru_Invalid email or password",
+    "PasswordResetError": "ru_There was an error processing the password reset.",
     "SuccessChangedPassword": "Пароль успешно изменен.",
     "YouWillGetInstructions": "Вы получите электронное письмо с инструкциями о том, как сменить пароль, в течение нескольких минут."
   },
   "resendInstructions": {
-    "subTitle": "Если вы не получили инструкции о подтверждении электронной почты, вы можете указать свой адрес электронной почты, чтобы отправить еще одно письмо с подтверждением.",
     "submit": "Отправить инструкции еще раз",
+    "subTitle": "Если вы не получили инструкции о подтверждении электронной почты, вы можете указать свой адрес электронной почты, чтобы отправить еще одно письмо с подтверждением.",
     "title": "Отправить инструкции еще раз"
   },
   "resetPassword": {
