--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/auth-zh.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/auth-zh.json
@@ -8,9 +8,12 @@
   "common": {
     "alreadyRegistered": "已经注册？ 在这里登录",
     "confirmNewPassword": {
+      "error": "zh_Password confirmation doesn't match Password",
       "label": "确认新密码"
     },
     "email": {
+      "error": "zh_Email cannot be empty",
+      "label": "电子邮箱地址",
       "whoseEmail": "我应该输入哪些电子邮箱？",
       "whoseEmailTooltip": "如果您是A-T的孩子（们）的父母/法定监护人，请使用您自己的电子邮箱地址。  我们将使用此地址与您在全球A-T成员数据平台中注册的任何人对应。"
     },
@@ -18,13 +21,16 @@
     "joinUs": "加入我们",
     "or": "或",
     "password": {
+      "error": "zh_at least 8 characters including: a lower-case letter, an upper-case letter, a number, a special character (such as !@#$%^&*).",
       "label": "密码"
     },
     "reenter": {
+      "error": "zh_Password confirmation doesn't match Password",
       "label": "重新输入密码"
     },
     "resendInstructions": "重新发送确认说明",
     "resetPassword": {
+      "error": "zh_at least 8 characters including: a lower-case letter, an upper-case letter, a number, a special character (such as !@#$%^&*).",
       "label": "新密码"
     },
     "signin": "签到",
@@ -38,9 +44,11 @@
   "header": {
     "aboutThisInitiative": "关于这个计划",
     "aboutUs": "关于我们",
+    "dataAccessRequest": "数据访问请求",
     "joinUs": "加入我们",
     "language": "语言",
     "learnMore": "了解更多",
+    "researchers": "研究员",
     "signIn": "签到"
   },
   "login": {
@@ -48,12 +56,14 @@
     "useEmail": "使用您的电子邮箱地址"
   },
   "modal": {
+    "InvalidLogin": "zh_Invalid email or password",
+    "PasswordResetError": "zh_There was an error processing the password reset.",
     "SuccessChangedPassword": "您的密码已成功更改。",
     "YouWillGetInstructions": "您将在几分钟内收到一封电子邮件，说明如何重新设置您的密码。"
   },
   "resendInstructions": {
-    "subTitle": "如果您没有收到确认说明，您可以输入电子邮箱地址以产生另一个确认电子邮件。",
     "submit": "重新发送确认说明",
+    "subTitle": "如果您没有收到确认说明，您可以输入电子邮箱地址以产生另一个确认电子邮件。",
     "title": "重新发送确认说明"
   },
   "resetPassword": {
