atcp | fix tooltips translations

--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/auth-ru.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/auth-ru.json
@@ -78,7 +78,7 @@
     "passwordHint": "(не менее 8 знаков)",
     "subTitle": "Вы можете войти в Платформу, используя свой адрес электронной почты и создав пароль, или учетную запись Google. Мы будем использовать этот адрес электронной почты для связи с вами по вопросам, касающимся Глобальной платформы данных о семьях с A-T.",
     "subtitleWithEmail": "Использовать адрес электронной почты",
-    "title": "\"Создайте учетную запись.",
+    "title": "Создайте учетную запись.",
     "useGoogle": "Использовать учетную запись Google"
   },
   "title": "Глобальная платформа данных о семьях с А-Т | Уведомление об активации учетной записи"
