rarex | replace naa10 image with text

--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -7,8 +7,8 @@
     }
   },
   "Header": {
+    "NAA10": "NAA10",
     "Alts": {
-      "Logo": "The NAA10 Foundation",
       "PoweredBy": "Powered by RARE-X"
     }
   },
