Prion: DDP-5358, linguistic changes: fixed all Chinese issues

--- a/ddp-workspace/projects/ddp-prion/src/assets/i18n/zh.json
+++ b/ddp-workspace/projects/ddp-prion/src/assets/i18n/zh.json
@@ -538,7 +538,7 @@
           "P2Bold": "博德研究所：",
           "P3": "电子邮箱：info@prionregistry.org",
           "P4": "信件邮寄地址：",
-          "P5": "麻省理工和哈佛大学博德研究所 (The Broad Institute of MIT and Harvard)",
+          "P5": "The Broad Institute of MIT and Harvard",
           "P6": "415 Main Street",
           "P7": "Cambridge, MA 02142",
           "P8": "United States"
@@ -577,7 +577,7 @@
           "P21Bold": "访问权 -",
           "P22": "您有权请求获得您个人数据的拷贝。",
           "P23Bold": "修正权 -",
-          "P24": "您有权请求我们纠正您认为不准确的信息。。您有权请求我们完善您认为不完善的信息。",
+          "P24": "您有权请求我们纠正您认为不准确的信息。您有权请求我们完善您认为不完善的信息。",
           "P25Bold": "删除权 -",
           "P26": "在一定条件下，您有权请求我们删除您的个人数据。",
           "P27Bold": "限制处理权 -",
