atcp | add edit logic for some activities

--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/en.json
@@ -560,7 +560,8 @@
     "ActivityActions": {
       "Continue": "Continue",
       "Start": "Start",
-      "ViewEdit": "View / Edit"
+      "View": "View",
+      "Edit": "Edit"
     },
     "Dashboard": {
       "Actions": "Actions",
